k8s/cart/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts
  namespace: ecommerce
  labels:
    app: carts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carts
  template:
    metadata:
      labels:
        app: carts
    spec:
      containers:
        - name: carts
          image: youssefar22/carts:latest
          ports:
            - containerPort: 3001
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: 3001
          resources:
            limits:
              memory: "100Mi"
            requests:
              memory: "100Mi"
              cpu: "50m"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
