k8s/cart/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carts
  namespace: ecommerce
spec:
  selector:
    app: carts
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
