k8s/cart/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: carts
  namespace: ecommerce
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`localhost`) && PathPrefix(`/carts`)
      middlewares:
        - name: strip-api-prefixes
      services:
        - kind: Service
          name: carts
          port: 3001
          scheme: http
